[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "modelscope>=1.32.0",
    "pillow>=12.0.0",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
